Fixes cogent scrollbars showing sometimes

--- a/views/showbot.scss
+++ b/views/showbot.scss
@@ -60,7 +60,7 @@ html body {
 }
 
 #content {
-  overflow:auto;
+  overflow: none;
   padding-bottom: 10px;
 }
 
